--- a/ubuntu/ssh 端口转发与跳板机.ipynb
+++ b/ubuntu/ssh 端口转发与跳板机.ipynb
@@ -25,7 +25,9 @@
     "- `ssh username@ip`\n",
     "- 配置文件：`~/.ssh/config`\n",
     "- `ssh -p`\n",
-    "    - 指定端口号，默认 `22`"
+    "    - 指定端口号，默认 `22`\n",
+    "- ssh 登录到服务器之后，配置一些默认执行的命令比如 `screenfetch`\n",
+    "    - 需要将命令写入服务器默认的 shell 中，对于 zsh 即是 `~/.zshrc`"
    ]
   },
   {
