--- a/nvidia_cuda/nsys.ipynb
+++ b/nvidia_cuda/nsys.ipynb
@@ -47,6 +47,7 @@
    "source": [
     "```\n",
     "nsys profile --stats=true python your_script.py\n",
+    "\n",
     "```"
    ]
   },
@@ -77,6 +78,19 @@
    ],
    "source": [
     "Image(url='../imgs/nsys.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f795719-7397-49d8-83c1-4c38fd1ce3d4",
+   "metadata": {},
+   "source": [
+    "- 对于 cuda 程序\n",
+    "\n",
+    "```\n",
+    "nvcc profile.cu -o profile_test\n",
+    "nsys profile --stats=true ./profile_test\n",
+    "```"
    ]
   }
  ],
