--- a/ubuntu/服务器用户管理.ipynb
+++ b/ubuntu/服务器用户管理.ipynb
@@ -16,6 +16,20 @@
     "- 硬件共享\n",
     "- 软件隔离"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4657e492-ddda-4461-8bed-435a398282ed",
+   "metadata": {},
+   "source": [
+    "- `id`：print real and effective user and group IDs\n",
+    "    - `id -u`: user id\n",
+    "    - `id -g`: group id\n",
+    "- `getent group`：查询得到所有的组\n",
+    "    - `group_name:x:group_id:user1,user2,...`\n",
+    "- `getent passwd`:查询得到所有的用户\n",
+    "    - `username:x:UID:GID:full name:home directory:default shell`"
+   ]
   }
  ],
  "metadata": {
@@ -34,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
