--- a/ubuntu/linux_shell.ipynb
+++ b/ubuntu/linux_shell.ipynb
@@ -118,7 +118,8 @@
    "id": "92e8a704",
    "metadata": {},
    "source": [
-    "- `2>/dev/null`：将命令的错误输出（stderr）重定向到 `/dev/null`；"
+    "- `2>/dev/null`：将命令的错误输出（stderr）重定向到 `/dev/null`；\n",
+    "    - 标准错误（file descriptor 2）"
    ]
   },
   {
