--- a/nvidia_cuda/cuda_memory_management.ipynb
+++ b/nvidia_cuda/cuda_memory_management.ipynb
@@ -57,6 +57,12 @@
     "    right.append(temp.to('cpu'))\n",
     "    del temp\n",
     "    torch.cuda.empty_cache()\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "del model\n",
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()\n",
     "```"
    ]
   },
