--- a/nvidia_cuda/gpu_通信.ipynb
+++ b/nvidia_cuda/gpu_通信.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "15776a97-1e50-4b4a-a4ba-dc34a53a8cee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f6f73340-d0d0-4179-94ba-93593eecff94",
    "metadata": {},
@@ -23,9 +33,36 @@
    "source": [
     "- bus interface：总线接口\n",
     "    - 4090 的 bus interface：PCIe 4.0 x16（可以向下兼容到 x8，不过会有性能的损失）\n",
+    "        - PCIe 4.0 是代数；\n",
+    "        - x16：则是带宽；\n",
+    "        - 4.0 * x8 == 3.0 * x16\n",
     "    - x16 vs. x8 插槽\n",
     "        - 16个数据传输通道，可以提供最大的数据带宽，\n",
     "        - x8 插槽有8个数据传输通道，它的带宽是x16的一半。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b283c561-aa31-4b4d-a15d-fc27fc8b2a45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://i0.wp.com/www.deskdecode.com/wp-content/uploads/2022/07/PCI-Express-X16-vs.-X8-vs.-X4-vs.-X1-Slot-on-motherboard.jpg\" width=\"400\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url='https://i0.wp.com/www.deskdecode.com/wp-content/uploads/2022/07/PCI-Express-X16-vs.-X8-vs.-X4-vs.-X1-Slot-on-motherboard.jpg', width=400)"
    ]
   },
   {
