--- a/ubuntu/ubuntu_磁盘管理.ipynb
+++ b/ubuntu/ubuntu_磁盘管理.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ba00bf24-abcd-414d-9bff-d45e0ecad764",
+   "metadata": {},
+   "source": [
+    "- dstat: \n",
+    "    - `sudo apt install dstat`\n",
+    "    - cpu wait"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9faa4fa4",
    "metadata": {},
    "source": [
