--- a/ubuntu/wget_curl.ipynb
+++ b/ubuntu/wget_curl.ipynb
@@ -23,6 +23,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "500d62da-6c88-442b-b9a4-e8cf68e6f8d5",
+   "metadata": {},
+   "source": [
+    "- `-v, -k`\n",
+    "\n",
+    "    ```\n",
+    "    curl -v -k https://www.google.com\n",
+    "    \n",
+    "    export http_proxy=http://127.0.0.1:7890\n",
+    "    export https_proxy=http://127.0.0.1:7890\n",
+    "    curl -v -k https://www.google.com\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1b06ea11",
    "metadata": {},
    "source": [
