--- a/CPU_and_model_training.ipynb
+++ b/CPU_and_model_training.ipynb
@@ -44,7 +44,13 @@
    "metadata": {},
    "source": [
     "- `dataset.map(num_proc=os.cpu_count())`\n",
-    "    - 可显著地加快数据集预处理（tokenize）的速度；"
+    "    - num__proc 默认为 None，内部处理为 1\n",
+    "    - 可显著地加快数据集预处理（tokenize）的速度；\n",
+    "\n",
+    "```\n",
+    "# 对 1,652,614 条样本做 tokenize 的预处理\n",
+    "train_dataset = train_dataset.map(self.tokenize_row, num_proc=self.dataset_num_proc)\n",
+    "```"
    ]
   }
  ],
