--- a/nvidia_cuda/显卡核心技术参数.ipynb
+++ b/nvidia_cuda/显卡核心技术参数.ipynb
@@ -16,6 +16,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "de1b65f2-bff2-4ac5-8bde-978e1e41ee8c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T11:50:28.613844Z",
+     "iopub.status.busy": "2024-07-19T11:50:28.613227Z",
+     "iopub.status.idle": "2024-07-19T11:50:30.047060Z",
+     "shell.execute_reply": "2024-07-19T11:50:30.045288Z",
+     "shell.execute_reply.started": "2024-07-19T11:50:28.613795Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "581f9868",
    "metadata": {},
@@ -68,7 +86,70 @@
     "    - 4090: 16384 cuda cores, A100: 6912\n",
     "- 存储\n",
     "    - 速度：L1 > L2 > 显存（VRAM）\n",
-    "        - L1/L2：cache"
+    "        - L1/L2：cache\n",
+    "- SM (streaming multiprocessors)\n",
+    "    - 4090: 128\n",
+    "    - A100: 108个"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a7313e2f-9ea7-4110-9c31-4a93697b6deb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T11:53:19.973368Z",
+     "iopub.status.busy": "2024-07-19T11:53:19.972746Z",
+     "iopub.status.idle": "2024-07-19T11:53:19.986049Z",
+     "shell.execute_reply": "2024-07-19T11:53:19.983996Z",
+     "shell.execute_reply.started": "2024-07-19T11:53:19.973323Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_CudaDeviceProperties(name='NVIDIA GeForce RTX 4090', major=8, minor=9, total_memory=24217MB, multi_processor_count=128)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 关于 SM (streaming multiprocessors) 属性\n",
+    "# 每一个流处理器的大小为 192KB\n",
+    "torch.cuda.get_device_properties(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7e7d5a20-1a18-4558-b1f1-cb7641b3af1d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T11:53:52.841265Z",
+     "iopub.status.busy": "2024-07-19T11:53:52.840708Z",
+     "iopub.status.idle": "2024-07-19T11:53:52.851442Z",
+     "shell.execute_reply": "2024-07-19T11:53:52.849540Z",
+     "shell.execute_reply.started": "2024-07-19T11:53:52.841221Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'24.0MB'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{192*128/1024}MB'"
    ]
   },
   {
@@ -149,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
