--- a/nvidia_cuda/nvidia-smi_显卡信息查看.ipynb
+++ b/nvidia_cuda/nvidia-smi_显卡信息查看.ipynb
@@ -72,6 +72,126 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d8fb076-1885-48e1-aa26-ea1e63e26df6",
+   "metadata": {},
+   "source": [
+    "### device id（设备编号）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e01adaf-f25a-4be6-8e72-869294408915",
+   "metadata": {},
+   "source": [
+    "- https://blog.csdn.net/sdnuwjw/article/details/111615052\n",
+    "    - nvidia-smi 下的 GPU 编号默认使用 PCI_BUS_ID，而 PyTorch 代码默认情况下设备排序是 FASTEST_FIRST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ff6ce836-f223-48d9-8e2b-19b17811519d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T11:48:56.591151Z",
+     "iopub.status.busy": "2024-07-19T11:48:56.590516Z",
+     "iopub.status.idle": "2024-07-19T11:48:56.748102Z",
+     "shell.execute_reply": "2024-07-19T11:48:56.745775Z",
+     "shell.execute_reply.started": "2024-07-19T11:48:56.591103Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU 0: NVIDIA GeForce RTX 4090 (UUID: GPU-3aea0781-60bd-0145-884f-dcea78424adb)\n",
+      "GPU 1: NVIDIA GeForce RTX 4090 (UUID: GPU-3c7f0ec9-c4bd-0098-3e5b-2169faec6f6c)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi -L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "75356910-b92f-416e-919c-2a753c548e35",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T11:49:33.921659Z",
+     "iopub.status.busy": "2024-07-19T11:49:33.921053Z",
+     "iopub.status.idle": "2024-07-19T11:49:35.403859Z",
+     "shell.execute_reply": "2024-07-19T11:49:35.401975Z",
+     "shell.execute_reply.started": "2024-07-19T11:49:33.921612Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c86dcb99-da79-4311-b163-3508346e9538",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T11:49:49.998812Z",
+     "iopub.status.busy": "2024-07-19T11:49:49.998237Z",
+     "iopub.status.idle": "2024-07-19T11:49:50.100197Z",
+     "shell.execute_reply": "2024-07-19T11:49:50.098599Z",
+     "shell.execute_reply.started": "2024-07-19T11:49:49.998767Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_CudaDeviceProperties(name='NVIDIA GeForce RTX 4090', major=8, minor=9, total_memory=24217MB, multi_processor_count=128)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.get_device_properties(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "26707aba-f5ca-4704-912e-0c7492afee23",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T11:50:01.489956Z",
+     "iopub.status.busy": "2024-07-19T11:50:01.489332Z",
+     "iopub.status.idle": "2024-07-19T11:50:01.502494Z",
+     "shell.execute_reply": "2024-07-19T11:50:01.500324Z",
+     "shell.execute_reply.started": "2024-07-19T11:50:01.489909Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_CudaDeviceProperties(name='NVIDIA GeForce RTX 4090', major=8, minor=9, total_memory=24217MB, multi_processor_count=128)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.get_device_properties(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c3abcb3",
    "metadata": {},
    "source": [
@@ -117,12 +237,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "bbfc58ec",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-07-15T11:27:23.800124Z",
      "start_time": "2023-07-15T11:27:23.777283Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-07-19T11:56:55.083936Z",
+     "iopub.status.busy": "2024-07-19T11:56:55.083300Z",
+     "iopub.status.idle": "2024-07-19T11:56:55.094795Z",
+     "shell.execute_reply": "2024-07-19T11:56:55.092544Z",
+     "shell.execute_reply.started": "2024-07-19T11:56:55.083890Z"
     }
    },
    "outputs": [],
@@ -135,6 +262,45 @@
     "    handle = nvmlDeviceGetHandleByIndex(0)\n",
     "    info = nvmlDeviceGetMemoryInfo(handle)\n",
     "    print(f\"GPU memory occupied: {info.used//1024**2} MB.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4375c677-37a4-42d9-8e72-d3a8675730ad",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-19T11:58:20.719542Z",
+     "iopub.status.busy": "2024-07-19T11:58:20.718992Z",
+     "iopub.status.idle": "2024-07-19T11:58:20.732086Z",
+     "shell.execute_reply": "2024-07-19T11:58:20.729944Z",
+     "shell.execute_reply.started": "2024-07-19T11:58:20.719499Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU 0 UUID: GPU-3aea0781-60bd-0145-884f-dcea78424adb\n",
+      "GPU 1 UUID: GPU-3c7f0ec9-c4bd-0098-3e5b-2169faec6f6c\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pynvml\n",
+    "# 初始化 NVML\n",
+    "pynvml.nvmlInit()\n",
+    "\n",
+    "# 获取 GPU 数量\n",
+    "device_count = pynvml.nvmlDeviceGetCount()\n",
+    "\n",
+    "# 遍历每个 GPU 并获取其 UUID\n",
+    "for i in range(device_count):\n",
+    "    handle = pynvml.nvmlDeviceGetHandleByIndex(i)\n",
+    "    uuid = pynvml.nvmlDeviceGetUUID(handle)\n",
+    "    print(f\"GPU {i} UUID: {uuid}\")\n",
+    "pynvml.nvmlShutdown()"
    ]
   },
   {
