--- a/nvidia_cuda/显卡核心技术参数.ipynb
+++ b/nvidia_cuda/显卡核心技术参数.ipynb
@@ -8,6 +8,13 @@
     "ExecuteTime": {
      "end_time": "2023-08-26T11:40:15.379445Z",
      "start_time": "2023-08-26T11:40:15.363944Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-07-20T12:02:41.043010Z",
+     "iopub.status.busy": "2024-07-20T12:02:41.042372Z",
+     "iopub.status.idle": "2024-07-20T12:02:41.060989Z",
+     "shell.execute_reply": "2024-07-20T12:02:41.058912Z",
+     "shell.execute_reply.started": "2024-07-20T12:02:41.042957Z"
     }
    },
    "outputs": [],
@@ -31,6 +38,48 @@
    "outputs": [],
    "source": [
     "import torch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ca254d7-1431-4a7b-859a-d102e1fc28d6",
+   "metadata": {},
+   "source": [
+    "- Tesla\n",
+    "    - P40, 24GB，FP16 183.7 Gflops\n",
+    "    - P100，16GB，FP16 19Tflops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "27883119-d699-4ac4-972f-27b5acb33e00",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-20T12:02:55.998792Z",
+     "iopub.status.busy": "2024-07-20T12:02:55.998485Z",
+     "iopub.status.idle": "2024-07-20T12:02:56.010975Z",
+     "shell.execute_reply": "2024-07-20T12:02:56.008836Z",
+     "shell.execute_reply.started": "2024-07-20T12:02:55.998769Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://cdn.wccftech.com/wp-content/uploads/2022/09/NVIDIA-Ada-Lovelace-GPU-GeForce-RTX-4090-RTX-4080-Series-Graphics-Cards-_3-scaled.jpg\" width=\"500\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url='https://cdn.wccftech.com/wp-content/uploads/2022/09/NVIDIA-Ada-Lovelace-GPU-GeForce-RTX-4090-RTX-4080-Series-Graphics-Cards-_3-scaled.jpg', width=500)"
    ]
   },
   {
