--- a/硬件/cpu.ipynb
+++ b/硬件/cpu.ipynb
@@ -5,7 +5,7 @@
    "id": "074c9116-ee13-458e-a4d0-7461b19d2050",
    "metadata": {},
    "source": [
-    "### AMD"
+    "### AMD（Advanced Micro Devices）与 Intel"
    ]
   },
   {
@@ -13,7 +13,14 @@
    "id": "94b61eb3-9bba-4799-b4d9-934aeb00d4aa",
    "metadata": {},
    "source": [
-    "- 9554 vs. 9654"
+    "> 核心和线程；\n",
+    "\n",
+    "- EPYC（霄龙)：以其高核心数量而闻名；  \n",
+    "    - 9554 vs. 9654\n",
+    "        - 9554：64核，128线程；\n",
+    "        - 9654：96核，192线程；\n",
+    "- Intel：Xeon（至强）\n",
+    "    - Platinum：8336C，32核，64线程；"
    ]
   }
  ],
