--- a/ubuntu/iterm_zsh.ipynb
+++ b/ubuntu/iterm_zsh.ipynb
@@ -5,7 +5,8 @@
    "id": "122868bb",
    "metadata": {},
    "source": [
-    "- iterm：适用于 mac 终端"
+    "- iterm：适用于 mac 终端\n",
+    "    - 设置透明度：Profiles -> Window (30 比较合适)"
    ]
   },
   {
