--- a/ubuntu/ssh 端口转发与跳板机.ipynb
+++ b/ubuntu/ssh 端口转发与跳板机.ipynb
@@ -184,6 +184,10 @@
     "            - `root@server2`：跳板机的用户名和地址\n",
     "        - `netstat -antp | grep 8000`：本机在监听 8000 端口\n",
     "        - `ssh root@127.0.0.1 -p 8000`：跳转到 server3\n",
+    "    - `nohup ssh -L 8080:localhost:8080 server &`\n",
+    "        - `cat nohup.out`\n",
+    "        - `jobs`\n",
+    "        - `netstat -antp | grep 8080`：本机在监听 8000 端口\n",
     "- 远程端口转发\n",
     "    - 在 server2（跳板机上）上配置: `ssh -R 9000:server3:22 -fN root@server1`\n",
     "        - `-R`: remote\n",
