--- a/nvidia_cuda/gpu_topo(拓扑)_通信.ipynb
+++ b/nvidia_cuda/gpu_topo(拓扑)_通信.ipynb
@@ -20,6 +20,84 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5df2c9f8-5594-498d-944d-d78a83f9e448",
+   "metadata": {},
+   "source": [
+    "## 拓扑"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba9f5e77-8bac-40ff-b43d-169314d5d757",
+   "metadata": {},
+   "source": [
+    "https://juejin.cn/post/7151226884351590431\n",
+    "\n",
+    "- X： 自身\n",
+    "- SYS：通过 PCIe 的连接以及 NUMA 节点之间的 SMP 互连（例如，QPI/UPI）\n",
+    "- NODE：通过 PCIe 的连接以及 NUMA 节点内 PCIe 主机桥之间的互连\n",
+    "- PHB：通过 PCIe 和 PCIe 主机桥（通常是 CPU）的连接\n",
+    "- PXB：通过多个 PCIe 桥互连（不跨 PCIe 主机桥）\n",
+    "- PIX：通过最多一个 PCIe 桥互连\n",
+    "- NV# ：通过数量为n组的 NVLinks 互连"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0b03019c-02be-4d37-9db2-705446098077",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-09T11:58:07.386366Z",
+     "iopub.status.busy": "2024-08-09T11:58:07.385745Z",
+     "iopub.status.idle": "2024-08-09T11:58:07.573062Z",
+     "shell.execute_reply": "2024-08-09T11:58:07.570713Z",
+     "shell.execute_reply.started": "2024-08-09T11:58:07.386316Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t\u001b[4mGPU0\tGPU1\tCPU Affinity\tNUMA Affinity\tGPU NUMA ID\u001b[0m\n",
+      "GPU0\t X \tSYS\t0-63\t0\t\tN/A\n",
+      "GPU1\tSYS\t X \t0-63\t0\t\tN/A\n",
+      "\n",
+      "Legend:\n",
+      "\n",
+      "  X    = Self\n",
+      "  SYS  = Connection traversing PCIe as well as the SMP interconnect between NUMA nodes (e.g., QPI/UPI)\n",
+      "  NODE = Connection traversing PCIe as well as the interconnect between PCIe Host Bridges within a NUMA node\n",
+      "  PHB  = Connection traversing PCIe as well as a PCIe Host Bridge (typically the CPU)\n",
+      "  PXB  = Connection traversing multiple PCIe bridges (without traversing the PCIe Host Bridge)\n",
+      "  PIX  = Connection traversing at most a single PCIe bridge\n",
+      "  NV#  = Connection traversing a bonded set of # NVLinks\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi topo -m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8aac45cc-2f39-4791-9222-ba2f0e5da385",
+   "metadata": {},
+   "source": [
+    "### gpu affinity（亲和性）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9864004b-5f08-41b8-87cd-a237005ba6ca",
+   "metadata": {},
+   "source": [
+    "- https://github.com/NVIDIA/gpu_affinity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f6f73340-d0d0-4179-94ba-93593eecff94",
    "metadata": {},
    "source": [
