--- a/nvidia_cuda/gpu_topo(拓扑)_通信.ipynb
+++ b/nvidia_cuda/gpu_topo(拓扑)_通信.ipynb
@@ -81,6 +81,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e58cf42f-ff55-4cee-a7ec-0a7a72b1b6ba",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-09T12:17:48.013191Z",
+     "iopub.status.busy": "2024-08-09T12:17:48.012559Z",
+     "iopub.status.idle": "2024-08-09T12:17:48.192383Z",
+     "shell.execute_reply": "2024-08-09T12:17:48.189927Z",
+     "shell.execute_reply.started": "2024-08-09T12:17:48.013147Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device 0 is connected to device 1 by way of an SMP interconnect link between NUMA nodes.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 查看设备id为1和1的GPU之间的最直接路径遍历\n",
+    "!nvidia-smi topo -i 0,1 -p"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8aac45cc-2f39-4791-9222-ba2f0e5da385",
    "metadata": {},
@@ -94,6 +122,90 @@
    "metadata": {},
    "source": [
     "- https://github.com/NVIDIA/gpu_affinity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "929488d3-fa60-4aa2-a3fb-96a0bccb4ea7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-09T12:19:14.347244Z",
+     "iopub.status.busy": "2024-08-09T12:19:14.346581Z",
+     "iopub.status.idle": "2024-08-09T12:19:14.527093Z",
+     "shell.execute_reply": "2024-08-09T12:19:14.524653Z",
+     "shell.execute_reply.started": "2024-08-09T12:19:14.347196Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The GPUs that have an affinity with CPU 0 are:\n",
+      "0, 1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 查看与CPU 0、63（线程） 亲和的GPU设备列表\n",
+    "!nvidia-smi topo -c 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "debdcfd2-aee4-4e28-adb1-a1c7d4328af2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-09T12:19:16.498608Z",
+     "iopub.status.busy": "2024-08-09T12:19:16.497955Z",
+     "iopub.status.idle": "2024-08-09T12:19:16.675235Z",
+     "shell.execute_reply": "2024-08-09T12:19:16.672747Z",
+     "shell.execute_reply.started": "2024-08-09T12:19:16.498559Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The GPUs that have an affinity with CPU 63 are:\n",
+      "0, 1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi topo -c 63"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0774bac0-c7a0-4d4a-904b-5d9a56dfd570",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-09T12:19:22.696381Z",
+     "iopub.status.busy": "2024-08-09T12:19:22.695723Z",
+     "iopub.status.idle": "2024-08-09T12:19:22.871571Z",
+     "shell.execute_reply": "2024-08-09T12:19:22.869131Z",
+     "shell.execute_reply.started": "2024-08-09T12:19:22.696333Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No GPUs were found to have an affinity with CPU 64.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi topo -c 64"
    ]
   },
   {
