--- a/tmux.ipynb
+++ b/tmux.ipynb
@@ -14,13 +14,35 @@
    "metadata": {},
    "source": [
     "- 终端复用器（terminal multiplexer）\n",
-    "- 安装：sudo apt-get install tmux\n",
+    "- 安装：`sudo apt-get install tmux`\n",
     "- 进入 tmux 模式：terminal 中输入 tmux 回车\n",
     "  - Ctrl +b：激活控制台\n",
     "    - \"：上下\n",
     "    - %：左右\n",
     "    - o：切换窗口；\n",
     "    - x：关闭当前窗口；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "743496d3-1c1d-468d-b0de-42d365147eb3",
+   "metadata": {},
+   "source": [
+    "### session 会话管理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "042f8006-6da4-480e-9321-415279da9d51",
+   "metadata": {},
+   "source": [
+    "- 创建会话：`tmux new -s 0827`\n",
+    "    - 比如启动某服务\n",
+    "- 退出会话：`ctrl + b` -> `d`（detatch）\n",
+    "- 进入会话：`tmux attach -t 0827`\n",
+    "    - -t：target\n",
+    "- 查看会话：\n",
+    "    - `tmux ls`"
    ]
   },
   {
